test/Fail/Issue2436.err
Issue2436.agda:8.3-15: warning: -W[no]CoinductiveEtaRecord
Not switching on eta-equality for coinductive records.
If you must, use pragma {-# ETA U #-}
when checking the definition of U
Issue2436.agda:14.8-9: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  Issue2436.agda:14.8-9
